--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,23 @@ a {
   font-family: 'Grand Hotel', 'cursive';
   margin: 10px auto;
 }
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.item{
+  width: 30%;
+}
+
+.home {
+ 
+}
+
+.home-card {
+  max-width: 500px;
+  height: max-content;
+  margin: 26px auto;
+}
