set up a proxy for localhost resolving between client, and DB. Also added toast from materialize to say if sign up failed or success. also added an actual post to the database for user sign up, which then navigates you back to login page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,10 @@ a {
   height: max-content;
   margin: 26px auto;
 }
+
+#toast-container{
+  right:25% !important;
+  left:25% !important;
+  width: 50% !important;
+  top: 55% !important;
+}
