added dynamic changes of profile picture upon registration. applied dynamic logic to profile and userprofile page. refactored auth code to include pic requirements. refactored the signup form to executre based on fields input.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,3 +52,11 @@ a {
   width: 50% !important;
   top: 55% !important;
 }
+
+h5 {
+  padding: 5px;
+}
+
+.material-icons:hover{
+  cursor:pointer;
+}
