--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,3 +56,7 @@ a {
 .material-icons:hover {
   cursor: pointer;
 }
+
+.uploadPicButton {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+}
